# quant-trading-platform

./: .env  .env.ai  .env.database  .env.template  .gitignore  BINANCE_ORDER_FLOW_GUIDE.md  BINANCE_ORDER_IMPLEMENTATION_SUMMARY.md  CORE_IMPLEMENTATION_PLAN.md  Cargo.toml  Dockerfile.dev  E2E_TESTING_GUIDE.md  FINAL_SUMMARY.md  IMPLEMENTATION_OPTIONS.md  IMPLEMENTATION_SUMMARY.md  INCOMPLETE_FEATURES_CHECKLIST.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_FINAL_REPORT.md  PROJECT_STATUS_REPORT.md  README.md  REMAINING_FEATURES_PLAN.md  STRATEGY_CODE_TEMPLATES.md  SYSTEM_COMPLETION_CHECK.md  SYSTEM_COMPLETION_SUMMARY.md  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.minimal.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.unified.yml  rust-toolchain.toml
services/market-data/: Cargo.toml
services/market-data/src/: bootstrap.rs  lib.rs  main.rs  state.rs
services/market-data/src/application/: market_data_service.rs  mod.rs
services/market-data/src/application/service/: market_service.rs  mod.rs
services/market-data/src/domain/: mod.rs
services/market-data/src/domain/model/: kline.rs  mod.rs  tick.rs
services/market-data/src/domain/port/: exchange_port.rs  market_exchange_port.rs  message_port.rs  mod.rs  storage_port.rs
services/market-data/src/infrastructure/: mod.rs
services/market-data/src/infrastructure/exchange/: binance_ws.rs  mod.rs
services/market-data/src/infrastructure/messaging/: kafka_producer.rs  mod.rs
services/market-data/src/infrastructure/storage/: clickhouse_storage.rs  mod.rs
services/market-data/src/interface/: mod.rs
services/market-data/src/interface/http/: mod.rs  routes.rs
services/strategy-engine/: Cargo.toml
services/strategy-engine/src/: bootstrap.rs  lib.rs  main.rs  state.rs
services/strategy-engine/src/application/: mod.rs
services/strategy-engine/src/application/scheduler/: mod.rs  strategy_loader.rs  strategy_scheduler.rs
services/strategy-engine/src/application/service/: backtest_service.rs  market_event_consumer_service.rs  mod.rs  risk_service.rs  strategy_service.rs
services/strategy-engine/src/domain/: mod.rs
services/strategy-engine/src/domain/logic/: grid.rs  mean.rs  mod.rs  signal_generator.rs  strategy_registry.rs  strategy_trait.rs
services/strategy-engine/src/domain/model/: failure_record.rs  lifecycle_state.rs  market_type.rs  mod.rs  signal.rs  strategy.rs  strategy_config.rs  strategy_handle.rs  strategy_metadata.rs  strategy_runtime.rs
services/strategy-engine/src/domain/port/: market_event_port.rs  message_port.rs  mod.rs  risk_port.rs  strategy_executor_port.rs  strategy_port.rs  strategy_repository_port.rs  strategy_state_port.rs
services/strategy-engine/src/domain/service/: mod.rs  signal_generator.rs  strategy_registry.rs
services/strategy-engine/src/infrastructure/: mod.rs
services/strategy-engine/src/infrastructure/cache/: mod.rs  redis_strategy_state.rs
services/strategy-engine/src/infrastructure/messaging/: kafka_consumer.rs  kafka_producer.rs  mock_consumer.rs  mod.rs
services/strategy-engine/src/infrastructure/repository/: mod.rs  strategy_repository.rs
services/strategy-engine/src/infrastructure/risk/: mod.rs  noop_risk.rs
services/strategy-engine/src/infrastructure/strategy/: mod.rs  noop_strategy.rs  signal_strategy.rs  strategy_adapter.rs
services/strategy-engine/src/interface/: mod.rs
services/strategy-engine/src/interface/http/: mod.rs  routes.rs
services/trading-engine/: Cargo.toml
services/trading-engine/src/: bootstrap.rs  lib.rs  main.rs  state.rs
services/trading-engine/src/application/: mod.rs
services/trading-engine/src/application/service/: execution_service.rs  fill_processor.rs  market_event_consumer_service.rs  mod.rs  order_lifecycle_service.rs  risk_state_coordinator.rs  risk_state_initializer.rs
services/trading-engine/src/bootstrap/: background.rs  consumer.rs  database.rs  execution.rs  lifecycle.rs  mod.rs  risk.rs  strategy.rs
services/trading-engine/src/domain/: mod.rs
services/trading-engine/src/domain/logic/: execution_algo.rs  mod.rs
services/trading-engine/src/domain/model/: audit_event.rs  execution_fill.rs  mod.rs  order.rs  order_intent.rs  trade.rs
services/trading-engine/src/domain/port/: exchange_port.rs  exchange_query_port.rs  execution_port.rs  market_event_port.rs  mod.rs  order_execution_port.rs  order_repository_port.rs  order_risk_port.rs  risk_state_port.rs  strategy_port.rs  trade_audit_port.rs
services/trading-engine/src/domain/risk/: mod.rs
services/trading-engine/src/infrastructure/: mod.rs
services/trading-engine/src/infrastructure/audit/: mod.rs  noop_audit.rs  postgres_audit.rs
services/trading-engine/src/infrastructure/exchange/: binance.rs  binance_fill_stream.rs  binance_query.rs  mod.rs
services/trading-engine/src/infrastructure/execution/: binance_execution.rs  binance_futures_execution.rs  mod.rs  noop_execution.rs  order_executor.rs  rate_limiter.rs  retry_policy.rs
services/trading-engine/src/infrastructure/messaging/: kafka_consumer.rs  market_event_consumer.rs  mod.rs
services/trading-engine/src/interface/: mod.rs
services/trading-engine/src/interface/http/: mod.rs  (+1 more)
services/trading-engine/tests/: binance_execution_test.rs  binance_fill_stream_test.rs  execution_fill_test.rs  execution_smoke_test.rs
services/user-management/: Cargo.toml
services/user-management/src/: bootstrap.rs  lib.rs  main.rs  state.rs
services/user-management/src/application/: mod.rs
services/user-management/src/domain/: mod.rs
services/user-management/src/infrastructure/: mod.rs
services/user-management/src/interface/: mod.rs
shared/models/: Cargo.toml
shared/models/src/: 22.code-workspace  common.rs  lib.rs  market.rs  notification.rs  risk.rs  strategy.rs  trading.rs  user.rs
shared/protocols/: Cargo.toml
shared/protocols/src/: grpc.rs  http.rs  kafka.rs  lib.rs  standards.rs  websocket.rs
shared/utils/: Cargo.toml
shared/utils/src/: auth.rs  config.rs  crypto.rs  error.rs  http.rs  lib.rs  logging.rs  metrics.rs  time.rs  validation.rs
(+630 files in other folders)
