[package]
name = "market-data"
version = "0.1.0"
edition = "2021"

[dependencies]
# 共享内核
shared = { path = "../../shared" }

# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
anyhow = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket (用于交易所连接)
tokio-tungstenite = "0.21"
futures-util = "0.3"
