[package]
name = "market-data"
version = "0.1.0"
edition = "2021"

[dependencies]
# 共享内核
shared = { path = "../../shared" }

# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
anyhow = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket (用于交易所连接)
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# 代理支持
tokio-socks = "0.5"

# Kafka
rdkafka = { workspace = true }

# 时间/数值
chrono = { workspace = true }
rust_decimal = { workspace = true }

# URL 解析
url = "2"

# 环境变量
dotenvy = "0.15"

# ClickHouse 存储
clickhouse = { workspace = true }
