[package]
name = "strategy-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# 共享内核
shared = { path = "../../shared" }

# Web 框架
axum = { version = "0.7", features = ["macros"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
anyhow = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 类型
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
