[package]
name = "shared-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
config = { workspace = true }
dotenvy = { workspace = true }
prometheus = { workspace = true }
tokio-postgres = "0.7"
redis = { workspace = true }
base64 = "0.21"
hex = "0.4"
pbkdf2 = "0.12"
rand = "0.8"
axum = { workspace = true }
chrono-tz = "0.8"
regex = "1.10"
bytes = "1.5"
urlencoding = "2.1"
